# just-say-it

./: CMakeLists.txt  JustSayIt.apparmor  just-say-it-content.json  manifest.json.in
app/: CMakeLists.txt  JustSayIt.desktop.in  just-say-it.qml
app/tests/autopilot/: run
app/tests/autopilot/just-say-it/main/: test_main.py
backend/: CMakeLists.txt
backend/modules/JustSayIt/: AudioRecorder.cpp  AudioRecorder.h  backend.cpp  backend.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
